[gd_scene load_steps=42 format=3 uid="uid://ddqn284rddt5y"]

[ext_resource type="Script" path="res://Mage.gd" id="1_7db85"]
[ext_resource type="Texture2D" uid="uid://cn711gc1x77av" path="res://melee_attack.png" id="2_r7o63"]
[ext_resource type="Texture2D" uid="uid://bk81gla5gd43a" path="res://Idle-Sheet.png" id="3_s4nri"]
[ext_resource type="Texture2D" uid="uid://so6ph3esad81" path="res://Sprite-0001.png" id="4_ogm1o"]
[ext_resource type="Texture2D" uid="uid://bme5yo8ry44t7" path="res://Walking.png" id="5_7krmd"]
[ext_resource type="Script" path="res://test/Dash_Cooldown.gd" id="6_a0plp"]
[ext_resource type="Texture2D" uid="uid://c30y1gwlrvjf7" path="res://Sprute.png" id="6_ryr5f"]
[ext_resource type="PackedScene" uid="uid://c2p211sdya2lm" path="res://test_enemy.tscn" id="7_7t345"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fc3g8"]
atlas = ExtResource("2_r7o63")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qf0ti"]
atlas = ExtResource("2_r7o63")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmlr4"]
atlas = ExtResource("2_r7o63")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3o1x"]
atlas = ExtResource("2_r7o63")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfxi7"]
atlas = ExtResource("2_r7o63")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vkee"]
atlas = ExtResource("2_r7o63")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cbnm"]
atlas = ExtResource("3_s4nri")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3uce7"]
atlas = ExtResource("3_s4nri")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5h5w"]
atlas = ExtResource("3_s4nri")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pr4qe"]
atlas = ExtResource("3_s4nri")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hk67b"]
atlas = ExtResource("4_ogm1o")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofxt8"]
atlas = ExtResource("4_ogm1o")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3twn"]
atlas = ExtResource("4_ogm1o")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5n2s"]
atlas = ExtResource("4_ogm1o")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8530d"]
atlas = ExtResource("4_ogm1o")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmnpb"]
atlas = ExtResource("4_ogm1o")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5giiq"]
atlas = ExtResource("4_ogm1o")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dset6"]
atlas = ExtResource("4_ogm1o")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_25cix"]
atlas = ExtResource("5_7krmd")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_05xtq"]
atlas = ExtResource("5_7krmd")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_otse6"]
atlas = ExtResource("5_7krmd")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nsyi7"]
atlas = ExtResource("5_7krmd")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jftwb"]
atlas = ExtResource("5_7krmd")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ku42p"]
atlas = ExtResource("5_7krmd")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_luedi"]
atlas = ExtResource("5_7krmd")
region = Rect2(384, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_6t4hi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fc3g8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qf0ti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmlr4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3o1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfxi7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vkee")
}],
"loop": true,
"name": &"Attack Start Animation",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cbnm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uce7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5h5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pr4qe")
}],
"loop": true,
"name": &"Idle Animation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hk67b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofxt8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3twn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5n2s")
}],
"loop": false,
"name": &"Jump End Animation",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8530d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmnpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5giiq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dset6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5giiq")
}],
"loop": false,
"name": &"Jump Start Animation",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_25cix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_05xtq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otse6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nsyi7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jftwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ku42p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_luedi")
}],
"loop": true,
"name": &"Walking Animation",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y8mer"]
size = Vector2(16, 37)

[sub_resource type="CircleShape2D" id="CircleShape2D_qjh2x"]
radius = 19.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mgppl"]
texture = ExtResource("6_ryr5f")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, -16, 16, 16, -16, 16, -16, -16)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
7:1/0 = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
7:2/0 = 0
7:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:2/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
5:3/0 = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_0/angular_velocity = 0.0
6:3/0 = 0
6:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_0/angular_velocity = 0.0
7:3/0 = 0
7:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:3/0/physics_layer_0/angular_velocity = 0.0
0:4/0 = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0 = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
6:4/0 = 0
6:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:4/0/physics_layer_0/angular_velocity = 0.0
7:4/0 = 0
7:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:4/0/physics_layer_0/angular_velocity = 0.0
0:5/0 = 0
0:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_0/angular_velocity = 0.0
1:5/0 = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
2:5/0 = 0
2:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:5/0/physics_layer_0/angular_velocity = 0.0
3:5/0 = 0
3:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:5/0/physics_layer_0/angular_velocity = 0.0
4:5/0 = 0
4:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:5/0/physics_layer_0/angular_velocity = 0.0
5:5/0 = 0
5:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:5/0/physics_layer_0/angular_velocity = 0.0
6:5/0 = 0
6:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:5/0/physics_layer_0/angular_velocity = 0.0
7:5/0 = 0
7:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:5/0/physics_layer_0/angular_velocity = 0.0
0:6/0 = 0
0:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:6/0/physics_layer_0/angular_velocity = 0.0
1:6/0 = 0
1:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:6/0/physics_layer_0/angular_velocity = 0.0
2:6/0 = 0
2:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:6/0/physics_layer_0/angular_velocity = 0.0
3:6/0 = 0
3:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:6/0/physics_layer_0/angular_velocity = 0.0
4:6/0 = 0
4:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:6/0/physics_layer_0/angular_velocity = 0.0
5:6/0 = 0
5:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:6/0/physics_layer_0/angular_velocity = 0.0
6:6/0 = 0
6:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:6/0/physics_layer_0/angular_velocity = 0.0
7:6/0 = 0
7:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:6/0/physics_layer_0/angular_velocity = 0.0
0:7/0 = 0
0:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:7/0/physics_layer_0/angular_velocity = 0.0
1:7/0 = 0
1:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:7/0/physics_layer_0/angular_velocity = 0.0
2:7/0 = 0
2:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:7/0/physics_layer_0/angular_velocity = 0.0
3:7/0 = 0
3:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:7/0/physics_layer_0/angular_velocity = 0.0
4:7/0 = 0
4:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:7/0/physics_layer_0/angular_velocity = 0.0
5:7/0 = 0
5:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:7/0/physics_layer_0/angular_velocity = 0.0
6:7/0 = 0
6:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:7/0/physics_layer_0/angular_velocity = 0.0
7:7/0 = 0
7:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:7/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_valg7"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_mgppl")

[sub_resource type="CircleShape2D" id="CircleShape2D_c8f7v"]
radius = 29.0172

[sub_resource type="RectangleShape2D" id="RectangleShape2D_otw2r"]
size = Vector2(2832.88, 112)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1phf0"]
size = Vector2(2673, 20)

[node name="Node2D" type="Node2D"]

[node name="Mage" type="CharacterBody2D" parent="."]
collision_layer = 9
script = ExtResource("1_7db85")
nSPEED = 80.0
friction = 1.0

[node name="Camera2D" type="Camera2D" parent="Mage"]
scale = Vector2(5, 5)
zoom = Vector2(3, 3)
process_callback = 0
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Mage"]
sprite_frames = SubResource("SpriteFrames_6t4hi")
animation = &"Attack Start Animation"
autoplay = "Idle Animation"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mage"]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_y8mer")

[node name="Player_Hitbox" type="Area2D" parent="Mage"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mage/Player_Hitbox"]
shape = SubResource("CircleShape2D_qjh2x")

[node name="Dash_Cooldown" type="Timer" parent="Mage"]
process_callback = 0
wait_time = 0.5
one_shot = true
script = ExtResource("6_a0plp")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_valg7")
format = 2
layer_0/name = "Ground"
layer_0/tile_data = PackedInt32Array(196603, 0, 0, 196604, 0, 0, 196605, 0, 0, 196606, 0, 0, 131072, 0, 0, 196607, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 196602, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, -65529, 0, 0, -65528, 0, 0, 11, 0, 0, 10, 0, 0, 12, 0, 0, 13, 0, 0, 65547, 0, 0, 65546, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 17, 0, 0, 19, 0, 0, 18, 0, 0, -65517, 0, 0, -65516, 0, 0, 20, 0, 0, 65551, 0, 0, -65514, 0, 0, -65512, 0, 0, -65510, 0, 0, 196601, 0, 0, 196600, 0, 0, 131063, 0, 0, 65525, 0, 0, 65526, 0, 0, -11, 0, 0, -65548, 0, 0, -131085, 0, 0, -196621, 0, 0, -262156, 0, 0, -262157, 0, 0, -327692, 0, 0, -131071, 0, 0, -196609, 0, 0, -327678, 0, 0, -327675, 0, 0, -327673, 0, 0, -327676, 0, 0, -327671, 0, 0, -131045, 0, 0, -196580, 0, 0, -262119, 0, 0, -327658, 0, 0, -327661, 0, 0, -327663, 0, 0, -327666, 0, 0, -327668, 0, 0, -327669, 0, 0)

[node name="Test_enemy" parent="." instance=ExtResource("7_7t345")]
position = Vector2(143, -16)

[node name="Areakill" type="Area2D" parent="Test_enemy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Test_enemy/Areakill"]
shape = SubResource("CircleShape2D_c8f7v")

[node name="deadzone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="deadzone"]
position = Vector2(828.563, 665)
shape = SubResource("RectangleShape2D_otw2r")

[node name="freefall" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="freefall"]
position = Vector2(777, 193)
shape = SubResource("RectangleShape2D_1phf0")

[connection signal="animation_finished" from="Mage/AnimatedSprite2D" to="Mage" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="sprite_frames_changed" from="Mage/AnimatedSprite2D" to="Mage" method="_on_animated_sprite_2d_sprite_frames_changed"]
[connection signal="timeout" from="Mage/Dash_Cooldown" to="Mage" method="_on_dash_cooldown_timeout"]
[connection signal="timeout" from="Mage/Dash_Cooldown" to="Mage/Dash_Cooldown" method="_on_timeout"]
[connection signal="body_exited" from="Test_enemy/Areakill" to="Mage" method="_on_areakill_body_exited"]
[connection signal="body_exited" from="Test_enemy/Areakill" to="Test_enemy" method="_on_areakill_body_exited"]
[connection signal="body_entered" from="deadzone" to="Mage" method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="freefall" to="Mage" method="_on_freefall_body_entered"]
